@@ -36,6 +36,7 @@ V1.1 Release
 -Fixed an event invocation order issue and a parameter update issue related to routed messages.
 -Updated Spring.NET to version 1.3.0.
 -Made DefaultWindowManager more friendly to WPF's NavigationWindow.
+-Fixed a bug with non-modal window shutdown in DefaultWindowManager.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
